# Triangr

./: .gitignore  CHANGELOG.md  NOTICE  README.md  angr_decompile.py  bridge_mcp_ghidra.py  pom.xml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  release.yml
scripts/: install.sh
src/main/java/com/lauriewired/: GhidraMCPPlugin.java
src/main/resources/: extension.properties
tests/: build.gradle  conftest.py  test_bridge.py  test_health.py
