[build-system]
requires = ["hatchling>=1.20", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[project]
name = "ghidramcp"
dynamic = ["version"]
description = "Triangr MCP bridge for Ghidra project context and optional angr/Oxidizer analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "LaurieWired"},
    {name = "Triangr contributors"},
]
keywords = ["ghidra", "reverse-engineering", "mcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = [
    "mcp>=1.2.0,<2",
    "httpx>=0.27,<1",
    "tenacity>=8.2,<10",
]

[project.optional-dependencies]
angr = [
    "angr==9.2.217",
]

[project.urls]
Homepage = "https://github.com/rustopian/Triangr"
Repository = "https://github.com/rustopian/Triangr"
Issues = "https://github.com/rustopian/Triangr/issues"

[project.scripts]
bridge_mcp_ghidra = "bridge_mcp_ghidra:main"

[tool.hatch.build]
include = [
    "bridge_mcp_ghidra.py",
    "angr_decompile.py",
    "README.md",
    "LICENSE",
]

[tool.hatch.version]
source = "vcs"
# Accept both "v1.5.1" and bare "1.5.1" style tags; the leading 'v' is
# optional. Without this, hatch-vcs prints "tag '...' no version found"
# and the build_sdist hook aborts with AssertionError.
tag-pattern = "v?(?P<version>\\d+\\.\\d+(?:\\.\\d+)?)"
fallback-version = "0.0"

[tool.hatch.build.targets.wheel]
only-include = [
    "bridge_mcp_ghidra.py",
    "angr_decompile.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "bridge_mcp_ghidra.py",
    "angr_decompile.py",
    "README.md",
    "LICENSE",
]
